Created book and user apps which produce an angular element each, then we use them on a non-processed html file.

--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,26 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Demo</title>
-  <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+<html>
+<head>
+
+    <script defer src="../dist/book/runtime.js"></script>
+    <script defer src="../dist/book/polyfills.js"></script>
+    <script defer src="../dist/book/vendor.js"></script>
+    <script defer src="../dist/book/main.js"></script>
+
+    <script defer src="../dist/user/runtime.js"></script>
+    <script defer src="../dist/book/polyfills.js"></script>
+    <script defer src="../dist/user/vendor.js"></script>
+    <script defer src="../dist/user/main.js"></script>
+
 </head>
 <body>
-  <app-root></app-root>
+
+
+<wt-book></wt-book>
+<wt-book></wt-book>
+
+<wt-user></wt-user>
+<wt-user></wt-user>
+
 </body>
 </html>
